# kcoloredit

./: Makefile  README.md  kcoloredit-2.0.0-kde4.4.0-ftbfs.patch  kcoloredit.spec
src/: CMakeLists.txt
src/doc-translations/: CMakeLists.txt
src/po/: CMakeLists.txt
src/po/af/: kcoloredit.po
src/po/ar/: kcoloredit.po
src/po/be/: kcoloredit.po
src/po/bg/: kcoloredit.po
src/po/br/: kcoloredit.po
src/po/ca/: kcoloredit.po
src/po/ca@valencia/: kcoloredit.po
src/po/cs/: kcoloredit.po
src/po/cy/: kcoloredit.po
src/po/da/: kcoloredit.po
src/po/de/: kcoloredit.po
src/po/el/: kcoloredit.po
src/po/en_GB/: kcoloredit.po
src/po/eo/: kcoloredit.po
src/po/es/: kcoloredit.po
src/po/et/: kcoloredit.po
src/po/eu/: kcoloredit.po
src/po/fa/: kcoloredit.po
src/po/fi/: kcoloredit.po
src/po/fr/: kcoloredit.po
src/po/ga/: kcoloredit.po
src/po/gl/: kcoloredit.po
src/po/he/: kcoloredit.po
src/po/hi/: kcoloredit.po
src/po/hne/: kcoloredit.po
src/po/hr/: kcoloredit.po
src/po/hu/: kcoloredit.po
src/po/is/: kcoloredit.po
src/po/it/: kcoloredit.po
src/po/ja/: kcoloredit.po
src/po/km/: kcoloredit.po
src/po/ku/: kcoloredit.po
src/po/lt/: kcoloredit.po
src/po/lv/: kcoloredit.po
src/po/mai/: kcoloredit.po
src/po/mk/: kcoloredit.po
src/po/ms/: kcoloredit.po
src/po/nb/: kcoloredit.po
src/po/nds/: kcoloredit.po
src/po/ne/: kcoloredit.po
src/po/nl/: kcoloredit.po
src/po/nn/: kcoloredit.po
src/po/oc/: kcoloredit.po
src/po/pa/: kcoloredit.po
src/po/pl/: kcoloredit.po
src/po/pt/: kcoloredit.po
(+24 files in other folders)
