add_subdirectory( da_kcoloredit/kcoloredit )
add_subdirectory( de_kcoloredit/kcoloredit )
add_subdirectory( es_kcoloredit/kcoloredit )
add_subdirectory( et_kcoloredit/kcoloredit )
add_subdirectory( fr_kcoloredit/kcoloredit )
add_subdirectory( it_kcoloredit/kcoloredit )
add_subdirectory( pt_kcoloredit/kcoloredit )
add_subdirectory( pt_BR_kcoloredit/kcoloredit )
add_subdirectory( ru_kcoloredit/kcoloredit )
add_subdirectory( sv_kcoloredit/kcoloredit )
add_subdirectory( uk_kcoloredit/kcoloredit )
